--- a/FileCounter/FileCounter.Cli.csproj
+++ b/FileCounter/FileCounter.Cli.csproj
@@ -1,12 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>0.0.1</Version>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <RollForward>LatestMajor</RollForward>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PublishAot>true</PublishAot>
+    <PublishAot Condition="'$(PublishWithoutAot)' != 'true'">true</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
+
+    <PackAsTool>true</PackAsTool>
+    <PackageTags>console cli tool filesystem</PackageTags>
+    <ToolCommandName>fi</ToolCommandName>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+    <PackageProjectUrl>https://github.com/iseiryu/FileInformation</PackageProjectUrl>
+    <PackageReleaseNotes>https://github.com/iseiryu/FileInformation/blob/main/CHANGELOG.md</PackageReleaseNotes>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+
+    <Description>A dotnet global tool to get data about the files and directories.</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/iseiryu/FileInformation</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <Authors>iSeiryu</Authors>
+    <Company />
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +34,11 @@
 
   <ItemGroup>
     <TrimmerRootDescriptor Include="RootDescriptor.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Include README here so it shows up in the nuget.org page -->
+    <None Include="..\README.md" Link="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
