--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
 name: release
 
 on:
-    # Triggers the workflow on push or pull request events but only for the main branch
     push:
-      branches: [ main ]
-    pull_request:
-      branches: [ main ]
+      tags:
+        - "v*.*.*"
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
 
@@ -25,7 +23,7 @@ jobs:
       run: dotnet --info
       
     - name: Pack
-      run: dotnet pack -c Release /p:ContinuousIntegrationBuild=true /p:PublishWithoutAot=true
+      run: dotnet pack -c Release /p:ContinuousIntegrationBuild=true /p:PublishWithoutAot=true /p:InformationalVersion=$GitHash /p:MarkAsPrerelease=true
       
     # publish to nuget. This will publish both a nupkg and snupkg file.
     - name: Publish
