--- a/FileInformation/FileInformation.Cli.csproj
+++ b/FileInformation/FileInformation.Cli.csproj
@@ -26,8 +26,10 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
     <PackageReference Include="Spectre.Console" Version="0.48.0" />
     <PackageReference Include="Spectre.Console.Cli" Version="0.48.0" />
+    <PackageReference Include="Spectre.Console.ImageSharp" Version="0.48.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,6 +39,7 @@
   <ItemGroup>
     <!-- Include README here so it shows up in the nuget.org page -->
     <None Include="..\README.md" Link="README.md" Pack="true" PackagePath="\" />
+    <None Include="images\rage.jpg" Link="rage.jpg" Pack="true" PackagePath="\images" />
   </ItemGroup>
 
 </Project>
