Add tests (more integration than unit).

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,14 @@ jobs:
     
     - name: Build
       run: dotnet build -c Release
+    
+    - name: Test
+      run: dotnet test --no-build --logger trx --results-directory "TestResults"
+
+    - name: Upload dotnet test results
+      uses: actions/upload-artifact@v4
+      with:
+        name: dotnet--test-results
+        path: TestResults
+      # Use always() to always run this step to publish test results when there are test failures
+      if: ${{ always() }}
