build.yml: build with Debug config to run tests.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet --info
     
     - name: Build
-      run: dotnet build -c Release
+      run: dotnet build
     
     - name: Test
       run: dotnet test --no-build --logger trx --results-directory "TestResults-${{ matrix.platform }}"
